# NES_emulator

./: .clang-format  .gitignore  CMakeLists.txt  DOC_PLAN.md  LICENSE  Makefile  Notes  PLAN.md  README.md  TEST_PLAN.md  opcode  opcode_generator.py  savestate.sav
.opencode/plugin/: plan-runner.ts
cpu/: cpu.c  cpu.h  opcodes.c  opcodes.h
docs/: technical-design.md  testing.md  troubleshooting.md
docs/implementation_plans/: saved_state.md
legacy/: cpu.c  cpu.h  opcodes.c
src/: main.c
src/apu/: apu.c  apu.h
src/bus/: bus.c  bus.h
src/cartridge/: cartridge.c  cartridge.h
src/cpu/: cpu.c  cpu.h
src/mapper/: mapper.c  mapper.h
src/ppu/: ppu.c  ppu.h
src/savestate/: savestate.c  savestate.h
test/: nestest_runner.c  test_apu.c  test_bus.c  test_cartridge.c  test_cpu.c  test_cpu.h  test_helpers.h  test_mapper.c  test_ppu.c
